<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.moonhaven.earlysamurai.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.moonhaven.earlysamurai.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_deals"
        android:name="com.moonhaven.earlysamurai.ui.deals.DealsFragment"
        android:label="@string/title_deals"
        tools:layout="@layout/fragment_deals" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.moonhaven.earlysamurai.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_user_info"
        android:name="com.moonhaven.earlysamurai.ui.about.AboutFragment"
        tools:layout="@layout/fragment_about"
        >
        <argument
            android:name="user"
            app:argType="com.moonhaven.earlysamurai.database.UserObject"
            app:nullable="false" />
    </fragment>
</navigation>