<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/logo_image_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:contentDescription="@string/logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_deals" />

    <ImageView
        android:id="@+id/logo_image_mid"
        android:layout_width="@dimen/logo_image_size_big"
        android:layout_height="@dimen/logo_image_size_big"
        android:layout_marginTop="@dimen/margin_tiny"
        android:contentDescription="@string/logo_image_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_orange"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/logo_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image_mid"
        app:srcCompat="@drawable/logo_text"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="@+id/logo_image_right"
        app:layout_constraintBottom_toBottomOf="@id/logo_image_right"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back_arrow"
        tools:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>