<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/booking_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_huge"
        android:text="@string/book_meeting"
        android:textSize="@dimen/about_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/booking_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/booking_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_big"
        android:layout_marginRight="@dimen/margin_big">

        <LinearLayout
            android:id="@+id/name_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/border_rounded">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/name_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:text="@string/name_user"
                    android:textSize="@dimen/card_text_size" />

                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_text_size"
                    app:layout_constraintStart_toEndOf="@id/name_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:hint="@string/name_user" />

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginRight="@dimen/margin_small"
                    app:srcCompat="@drawable/flower" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/firm_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_tiny"
            android:background="@drawable/border_rounded">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/firm_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/firm_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:text="@string/booking_firm"
                    android:textSize="@dimen/card_text_size" />

                <EditText
                    android:id="@+id/firm_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/card_text_size"
                    app:layout_constraintStart_toEndOf="@id/firm_title"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:hint="@string/name_user" />

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginRight="@dimen/margin_small"
                    app:srcCompat="@drawable/flower" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/message_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/firm_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_tiny"
            android:background="@drawable/border_rounded">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/message_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/message_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_tiny"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:text="@string/booking_message"
                    android:textSize="@dimen/card_text_size" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/message_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/message_icon"
                    android:layout_marginRight="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"/>

                <ImageView
                    android:id="@+id/message_icon"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    app:srcCompat="@drawable/flower" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_meeting"
        android:paddingLeft="@dimen/margin_tiny"
        android:paddingRight="@dimen/margin_tiny"
        android:backgroundTint="@null"
        android:background="@drawable/bordered_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/booking_container"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_big"/>


</androidx.constraintlayout.widget.ConstraintLayout>